# Any-code

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/scripts/: generate_release_notes.py  merge_latest_json.py
.github/workflows/: build.yml  release-linux.yml  release-macos.yml  release-windows.yml
docs/releases/: 5.28.6.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude_binary.rs  claude_mcp.rs  codex_mcp.rs  gemini_mcp.rs  main.rs
src-tauri/src/commands/: context_commands.rs  context_manager.rs  extensions.rs  mcp.rs  permission_config.rs  prompt_tracker.rs  simple_git.rs  usage.rs  wsl_utils.rs
src-tauri/src/commands/claude/: cli_runner.rs  config.rs  mod.rs  project_store.rs  session_history.rs
src-tauri/src/commands/codex/: config.rs  git_ops.rs  mod.rs  session.rs  usage.rs
src-tauri/src/commands/gemini/: config.rs  git_ops.rs  mod.rs  parser.rs  provider.rs  session.rs  types.rs  usage.rs
src-tauri/src/mcp/: claude.rs  gemini.rs  mod.rs  registry.rs
src-tauri/src/process/: registry.rs
src-tauri/src/utils/: config_utils.rs  mod.rs
src/components/: AutoCompactSettings.tsx  ClaudeCodeSession.tsx  SessionList.tsx  Settings.tsx  TabSessionWrapper.tsx
src/components/FloatingPromptInput/: CodexModelSelector.tsx  constants.tsx  index.tsx  reducer.ts  types.ts
src/components/dialogs/: AboutDialog.tsx  UpdateDialog.tsx
src/components/layout/: AppLayout.tsx  ViewRouter.tsx
src/components/message/: MessageBubble.tsx
src/components/settings/: GeneralSettings.tsx
src/contexts/: PlanModeContext.tsx  ProjectContext.tsx  UpdateContext.tsx
src/hooks/: useAutoCompactStatus.ts  usePromptExecution.ts  useSmartAutoScroll.ts  useUpdateCheck.ts
src/i18n/locales/: en.json  zh.json
src/lib/: api.ts  codexConverter.ts  codexModelSupport.ts  modelNameParser.ts  pricing.ts  tokenCounter.ts
src/pages/: SessionWindow.tsx
